--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,7 @@
 <script src='https://unpkg.com/react-dom@16/umd/react-dom.production.min.js'></script>
 <script src='https://unpkg.com/react-router@3.2.4/umd/ReactRouter.min.js'></script>
 <link rel="shortcut icon" href="https://www.html.cn/create-react-app/img/favicon/favicon.ico">
+<script src="/static/js/prism.js"></script>
 <div id='app'></div>
 <script src='./app.js'></script>
 
