--- a/www/index.html
+++ b/www/index.html
@@ -2,7 +2,8 @@
 <title id="title">vscode-online</title>
 <script>
   window.config = {
-    model: 'development'
+    model: 'development',
+    dark: true
   }
 </script>
 <script src='https://unpkg.com/react@16/umd/react.production.min.js'></script>
@@ -11,5 +12,6 @@
 <link rel="shortcut icon" href="https://www.html.cn/create-react-app/img/favicon/favicon.ico">
 <script src="/static/js/prism.js"></script>
 <div id='app'></div>
+<link rel="stylesheet" href="./skin/dark.css" id='style-theme'>
 <script src='./app.js'></script>
 
