--- a/www/index.html
+++ b/www/index.html
@@ -10,12 +10,14 @@
 <script src='https://unpkg.com/react-dom@16/umd/react-dom.production.min.js'></script>
 <script src='https://unpkg.com/react-router@3.2.4/umd/ReactRouter.min.js'></script>
 <link rel="shortcut icon" href="https://www.html.cn/create-react-app/img/favicon/favicon.ico">
-<link rel="stylesheet" href='//at.alicdn.com/t/font_1784674_65lg01bd23v.css'>
+<link rel="stylesheet" href='//at.alicdn.com/t/font_1694690_v1sle3ccqh.css'>
+<link rel="stylesheet" href='//at.alicdn.com/t/font_1784674_chv4mamt5ht.css'>
 <script src="/static/js/prism.js"></script>
 <div id='app'>
   <div class='load-spin'>
     <i class='iconfont icon-react load-spin-iconfont'></i>
   </div>
 </div>
+<link rel="stylesheet" href='./skin/theme.css'>
 <link rel="stylesheet" href='./skin/dark.css' id='style-theme'>
 <script src='./app.js'></script>
