--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,7 @@
 <script src='https://unpkg.com/react@16/umd/react.production.min.js'></script>
 <script src='https://unpkg.com/react-dom@16/umd/react-dom.production.min.js'></script>
 <script src='https://unpkg.com/react-router@3.2.4/umd/ReactRouter.min.js'></script>
-<link rel="shortcut icon" href="https://www.html.cn/create-react-app/img/favicon/favicon.ico">
+<link rel="shortcut icon" href="./static/image/icon.svg">
 <link rel="stylesheet" href='//at.alicdn.com/t/font_1694690_v1sle3ccqh.css'>
 <link rel="stylesheet" href='//at.alicdn.com/t/font_1784674_whdf36566zc.css'>
 <script src="/static/js/prism.js"></script>
