--- a/www/index.html
+++ b/www/index.html
@@ -15,7 +15,7 @@
 <script src="/static/js/prism.js"></script>
 <div id='app'>
   <div class='load-spin'>
-    <i class='iconfont icon-react load-spin-iconfont'></i>
+    <i class='iconfont icon-loading load-spin-iconfont'></i>
   </div>
 </div>
 <link rel="stylesheet" href='./skin/theme.css'>
