--- a/www/index.html
+++ b/www/index.html
@@ -11,6 +11,7 @@
 <script src='https://unpkg.com/react-router@3.2.4/umd/ReactRouter.min.js'></script>
 <link rel="shortcut icon" href="./static/image/icon.svg">
 <link rel="stylesheet" href='//at.alicdn.com/t/font_1694690_v1sle3ccqh.css'>
+<link rel="stylesheet" href='./font/codicon.css'>
 <link rel="stylesheet" href='//at.alicdn.com/t/font_1784674_3turvpl04q3.css'>
 <script src="/static/js/prism.js"></script>
 <div id='app'>
