--- a/www/index.html
+++ b/www/index.html
@@ -1,5 +1,5 @@
 <meta id="viewport" name="viewport" content="width=320; initial-scale=1.0;maximum-scale=1.0; user-scalable=no;" />
-<title id="title">vscode-online</title>
+<title id="title">web-workbench</title>
 <script>
 	window.config = {
     model: 'development',
