--- a/www/index.html
+++ b/www/index.html
@@ -1,5 +1,5 @@
 <meta id="viewport" name="viewport" content="width=320; initial-scale=1.0;maximum-scale=1.0; user-scalable=no;" />
-<title id="title">web-workbench</title>
+<title id="title">workbench</title>
 <script>
 	window.config = {
     model: 'development',
@@ -24,18 +24,4 @@
     </svg>
   </div>
 </div>
-<script>
-  window.MonacoEnvironment = {
-    getWorkerUrl: function (moduleId, label) {
-      if (label === 'typescript' || label === 'javascript') {
-        return `data:text/javascript;charset=utf-8,${encodeURIComponent(`
-            importScripts('${process.env.ASSET_PATH}/typescript.worker.js');`
-        )}`;
-      }
-      return `data:text/javascript;charset=utf-8,${encodeURIComponent(`
-          importScripts('${process.env.ASSET_PATH}/editor.worker.js');`
-      )}`;
-    }
-  }
-</script>
 <script src='./app.js'></script>
