--- a/www/index.html
+++ b/www/index.html
@@ -9,10 +9,10 @@
 <script src='https://unpkg.com/react@16/umd/react.production.min.js'></script>
 <script src='https://unpkg.com/react-dom@16/umd/react-dom.production.min.js'></script>
 <script src='https://unpkg.com/react-router@3.2.4/umd/ReactRouter.min.js'></script>
-<link rel="shortcut icon" href="./static/image/icon.svg">
+<link rel="shortcut icon" href="/static/image/icon.svg">
 <link rel="stylesheet" href='//at.alicdn.com/t/font_1784674_3turvpl04q3.css'>
-<link rel="stylesheet" href='./font/codicon.css'>
-<link rel="stylesheet" href='./skin/dark.css' id='style-theme'>
+<link rel="stylesheet" href='/font/codicon.css'>
+<link rel="stylesheet" href='/skin/dark.css' id='style-theme'>
 <script src="/static/js/prism.js"></script>
 <div id='app'>
   <div class='load-spin'>
@@ -24,4 +24,4 @@
     </svg>
   </div>
 </div>
-<script src='./app.js'></script>
+<script src='/app.js'></script>
